@@ -1,4 +1,4 @@
-ext.coreVersion = '0.89.0'
+ext.coreVersion = '0.89.1'
 ext.clang = false // gcc is default for the NDK. It also produces smaller binaries
 
 def commonCflags = [ '-std=c++11', '-ffunction-sections', '-fdata-sections', '-flto' ]
