@@ -190,6 +190,8 @@ public class RealmTest extends AndroidTestCase {
 
     public void testInstanceIdForHashCollision() {
         // Ea.hashCode() == FB.hashCode()
+        Realm.deleteRealmFile(getContext(), "Ea");
+        Realm.deleteRealmFile(getContext(), "FB");
         Realm r1 = Realm.getInstance(getContext(), "Ea");
         Realm r2 = Realm.getInstance(getContext(), "FB");
         assertNotSame(r1, r2);
